@@ -1,40 +1,36 @@
 package com.igteam.immersive_geology.client.render;
 
-import blusunrize.immersiveengineering.api.tool.assembler.ItemStackRecipeQuery;
+import blusunrize.immersiveengineering.api.crafting.MultiblockRecipe;
 import blusunrize.immersiveengineering.common.blocks.generic.PoweredMultiblockTileEntity;
+import com.igteam.immersive_geology.ImmersiveGeology;
 import com.igteam.immersive_geology.api.crafting.recipes.recipe.SeparatorRecipe;
-import com.igteam.immersive_geology.client.model.IGModel;
-import com.igteam.immersive_geology.client.model.IGModels;
-import com.igteam.immersive_geology.client.model.ModelGravitySeparator;
+import com.igteam.immersive_geology.api.multiblock.Dual;
 import com.igteam.immersive_geology.common.block.tileentity.GravitySeparatorTileEntity;
 import com.mojang.blaze3d.matrix.MatrixStack;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.IRenderTypeBuffer;
 import net.minecraft.client.renderer.ItemRenderer;
-import net.minecraft.client.renderer.RenderHelper;
 import net.minecraft.client.renderer.model.ItemCameraTransforms;
 import net.minecraft.client.renderer.tileentity.TileEntityRenderer;
 import net.minecraft.client.renderer.tileentity.TileEntityRendererDispatcher;
-import net.minecraft.inventory.ItemStackHelper;
-import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
-import net.minecraft.item.crafting.Ingredient;
 import net.minecraft.util.Direction;
-import net.minecraft.util.IItemProvider;
 import net.minecraft.util.math.vector.Quaternion;
 import net.minecraft.util.math.vector.Vector3f;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.items.ItemStackHandler;
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.Logger;
 
 import java.util.Iterator;
-import java.util.function.Supplier;
 
 @OnlyIn(Dist.CLIENT)
 public class MultiblockGravitySeparatorRenderer extends TileEntityRenderer<GravitySeparatorTileEntity> {
     public MultiblockGravitySeparatorRenderer(TileEntityRendererDispatcher dispatcher){
         super(dispatcher);
     }
+
+    private Logger log = ImmersiveGeology.getNewLogger();
 
     //Ripped from IP's Pumpjack
     @Override
@@ -67,16 +63,19 @@ public class MultiblockGravitySeparatorRenderer extends TileEntityRenderer<Gravi
             float radius = 2;
             float ix, iy, iz;
             if(master != null){
-                Iterator<PoweredMultiblockTileEntity.MultiblockProcess<SeparatorRecipe>> queueIterator = master.processQueue.iterator();
 
-                while(queueIterator.hasNext()){
-                    PoweredMultiblockTileEntity.MultiblockProcessInWorld<SeparatorRecipe> wrapper = (PoweredMultiblockTileEntity.MultiblockProcessInWorld<SeparatorRecipe>) queueIterator.next();
-                    ItemStack item = wrapper.inputItems.get(0);
-                    float progress = (float) wrapper.processTick;
-                    float angle = (float) Math.toRadians((progress % (wrapper.maxTicks / 4)  / (wrapper.maxTicks / 4)) * 360f);
+                for (Dual<MultiblockRecipe, Integer> data : master.masterQueue.getElements()) {
+                    SeparatorRecipe recipe = (SeparatorRecipe) data.getFirst();
+                    ItemStack item = recipe.input.getMatchingStacks()[0];
+
+                    int maxTicks = recipe.getTotalProcessTime();
+                    float progress = (float) data.getSecond() / maxTicks;
+                    float angle = (float) Math.toRadians(progress * 360F);
+                    log.log(Level.WARN, "Render Info: " + item.getDisplayName().getString() + " | " + progress);
                     ix = (float) (Math.cos(angle) * radius);
                     iz = (float) (6 - (7 * (progress * 0.0045)));
                     iy = (float) (Math.sin(angle) * radius);
+
                     float yoffset = 2.7f;
                     float xoffset = 8.65f;
                     ItemRenderer itemRender = Minecraft.getInstance().getItemRenderer();
